update neovim settings

--- a/.vim/.vim/coc-settings.json
+++ b/.vim/.vim/coc-settings.json
@@ -16,8 +16,7 @@
   "coc.preferences.formatOnType": true,
   "languageserver": {
     "terraform": {
-      "command": "terraform-ls",
-      "args": ["serve"],
+      "command": "terraform-lsp",
       "filetypes": ["terraform", "tf"],
       "initializationOptions": {},
       "settings": {}
